# pico-windows-template

./: CMakeLists.txt  README.md  main.c
